# werd

./: .editorconfig  .gitignore  LICENSE  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml
ci/: Containerfile  env.example
ci/runner/: entrypoint.sh
ci/scripts/: build-api.sh  build-monitors.sh  build-web.sh  detect-changes.sh  lint.sh  summary.sh  test-api.sh  test-web.sh
design/: ARCHITECTURE.md  CAPTCHA_RESEARCH.md  DATA_MODEL.md  DESIGN_LOG.md
design/diagrams/: README.md
marketing/: README.md
plan/: BLOCKERS.md  PROGRESS.md  README.md
plan/phases/: 01-core-infra.md  02-api-server.md  03-services.md  04-dashboard.md  05-monitoring.md  06-notifications.md  07-publishing.md  08-network-access.md  09-kubernetes.md  10-hardening.md
research/: README.md
spec/: openapi.yaml
src/browser-service/: Dockerfile  README.md  pyproject.toml
src/browser-service/src/browser_service/: browser.py  captcha.py  config.py  email.py  main.py  models.py
src/browser-service/src/browser_service/solvers/: __init__.py  api_solver.py  recognizer_solver.py
src/browser-service/tests/: conftest.py  test_api.py  test_bluesky.py  test_hn.py  test_reddit.py
src/deploy/: README.md
src/email-verification/: .env.example  Makefile  README.md  docker-compose.yml
src/go/: README.md  go.work
src/web/: Caddyfile  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: test-admin-login.sh
tests/integration/: README.md  lib.sh  (+2 more)
tools/: README.md  check-podman.sh  dev-setup.sh  generate-secrets.sh  runner.sh
(+195 files in other folders)
