[project]
name = "werd-browser-service"
version = "0.1.0"
description = "Browser automation service for Werd platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
captcha = [
    "recognizer>=0.7",
    "patchright>=1.49",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_service"]
